force-app/main/default/objects/VehicleSpecification__c/VehicleSpecification__c.object-meta.xml
<CustomObject>
    <label>Vehicle Specification</label>
    <nameField>
        <label>Vehicle Specification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>