force-app/main/default/objects/VehicleSpecification__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>Name of the vehicle manufacturer</description>
    <label>Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>