force-app/main/default/objects/VehicleSpecification__c/fields/MakeCode__c.field-meta.xml
<CustomField>
    <fullName>MakeCode__c</fullName>
    <description>The unique code representing the make</description>
    <label>Make code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>