force-app/main/default/objects/VehicleSpecification__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>A specific vehicle brand identified by a name or number</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>