force-app/main/default/objects/VehicleSpecification__c/fields/ModelCode__c.field-meta.xml
<CustomField>
    <fullName>ModelCode__c</fullName>
    <description>The code representing the model</description>
    <label>Model code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>