force-app/main/default/objects/VehicleSpecification__c/fields/SubModel__c.field-meta.xml
<CustomField>
    <fullName>SubModel__c</fullName>
    <description>The submodel of the vehicle</description>
    <label>Sub model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>