force-app/main/default/objects/VehicleSpecification__c/fields/SubModelCode__c.field-meta.xml
<CustomField>
    <fullName>SubModelCode__c</fullName>
    <description>Unique code of the submodel</description>
    <label>Sub model code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>