force-app/main/default/objects/VehicleSpecification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Body type of the vehicle</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VehicleType</valueSetName>
    </valueSet>
</CustomField>